change post method to get

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </ul>
           <form
             action="./success.html"
-            method="post"
+            method="get"
             class="signup-form | margin-block-start-40"
             novalidate
           >
