--- a/success.html
+++ b/success.html
@@ -42,7 +42,7 @@
           </div>
           <form
             action="./index.html"
-            method="post"
+            method="get"
             class="signup-form margin-block-start-40"
           >
             <button type="submit" class="button">Dismiss message</button>
