--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 name="email"
                 id="email"
                 placeholder="email@company.com"
-                class="email-input error | padding-block-16 padding-inline-start-24"
+                class="email-input | padding-block-16 padding-inline-start-24"
                 aria-invalid="false"
               />
             </div>
